--- a/helm/tekton-tutorial-greeter/templates/route.yaml
+++ b/helm/tekton-tutorial-greeter/templates/route.yaml
@@ -8,7 +8,7 @@ items:
     name: greeter
     namespace: {{ .Release.Namespace }}
   spec:
-    host: {{ .Release.Namespace }}.{{ appSuffix}}
+    host: {{ .Release.Namespace }}.{{ .Values.appSuffix}}
     port:
       targetPort: 8080
     to:
