add secure route

--- a/helm/tekton-tutorial-greeter/templates/route.yaml
+++ b/helm/tekton-tutorial-greeter/templates/route.yaml
@@ -9,6 +9,9 @@ items:
     namespace: {{ .Release.Namespace }}
   spec:
     subdomain: {{ .Release.Namespace }}
+    tls:
+      insecureEdgeTerminationPolicy: Redirect
+      terminationPolicy: edge    
     port:
       targetPort: 8080
     to:
